update docs for autonat

--- a/autonat/libp2p/multibase.html
+++ b/autonat/libp2p/multibase.html
@@ -271,9 +271,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/autonat/libp2p/multibase.nim#L25"
+href="https://github.com/status-im/nim-libp2p/tree/autonat/libp2p/multibase.nim#L28"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multibase.nim#L25" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multibase.nim#L28" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -284,9 +284,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/autonat/libp2p/multibase.nim#L22"
+href="https://github.com/status-im/nim-libp2p/tree/autonat/libp2p/multibase.nim#L25"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multibase.nim#L22" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multibase.nim#L25" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -297,21 +297,21 @@ class="link-seesrc" target="_blank">Source</a>
 <dl class="item">
 <div id="decode,typedesc[MultiBase],openArray[char]" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#decode%2Ctypedesc%5BMultiBase%5D%2CopenArray%5Bchar%5D"><span class="Identifier">decode</span></a><span class="Other">(</span><span class="Identifier">mbtype</span><span class="Other">:</span> <span class="Identifier">typedesc</span><span class="Other">[</span><a href="multibase.html#MultiBase"><span class="Identifier">MultiBase</span></a><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">inbytes</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">char</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Result</span><span class="Other">[</span>
-    <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">string</span><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span></span>.}</pre></dt>
+    <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">string</span><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 Decode MultiBase encoded array <tt class="docutils literal"><span class="pre">inbytes</span></tt> and return decoded sequence of bytes.
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/autonat/libp2p/multibase.nim#L465"
+href="https://github.com/status-im/nim-libp2p/tree/autonat/libp2p/multibase.nim#L468"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multibase.nim#L465" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multibase.nim#L468" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
 <div id="decode,typedesc[MultiBase],openArray[char],openArray[byte],int" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#decode%2Ctypedesc%5BMultiBase%5D%2CopenArray%5Bchar%5D%2CopenArray%5Bbyte%5D%2Cint"><span class="Identifier">decode</span></a><span class="Other">(</span><span class="Identifier">mbtype</span><span class="Other">:</span> <span class="Identifier">typedesc</span><span class="Other">[</span><a href="multibase.html#MultiBase"><span class="Identifier">MultiBase</span></a><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">inbytes</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">char</span><span class="Other">]</span><span class="Other">;</span>
             <span class="Identifier">outbytes</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">outlen</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <a href="multibase.html#MultiBaseStatus"><span class="Identifier">MultiBaseStatus</span></a> {.
-    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span></span>.}</pre></dt>
+    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 <p>Decode array <tt class="docutils literal"><span class="pre">inbytes</span></tt> using MultiBase encoding and store decoded value to <tt class="docutils literal"><span class="pre">outbytes</span></tt>.</p>
@@ -320,42 +320,42 @@ class="link-seesrc" target="_blank">Source</a>
 <p>On successfull decoding <tt class="docutils literal"><span class="pre">MultiBaseStatus.Success</span></tt> will be returned and <tt class="docutils literal"><span class="pre">outlen</span></tt> will be set to number of encoded octets (bytes).</p>
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/autonat/libp2p/multibase.nim#L411"
+href="https://github.com/status-im/nim-libp2p/tree/autonat/libp2p/multibase.nim#L414"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multibase.nim#L411" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multibase.nim#L414" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
 <div id="decodedLength,typedesc[MultiBase],char,int" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#decodedLength%2Ctypedesc%5BMultiBase%5D%2Cchar%2Cint"><span class="Identifier">decodedLength</span></a><span class="Other">(</span><span class="Identifier">mbtype</span><span class="Other">:</span> <span class="Identifier">typedesc</span><span class="Other">[</span><a href="multibase.html#MultiBase"><span class="Identifier">MultiBase</span></a><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">encoding</span><span class="Other">:</span> <span class="Identifier">char</span><span class="Other">;</span> <span class="Identifier">length</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> {.
-    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span></span>.}</pre></dt>
+    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 Return estimated size of buffer to store MultiBase decoded value with encoding character <tt class="docutils literal"><span class="pre">encoding</span></tt> of length <tt class="docutils literal"><span class="pre">length</span></tt>.
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/autonat/libp2p/multibase.nim#L358"
+href="https://github.com/status-im/nim-libp2p/tree/autonat/libp2p/multibase.nim#L361"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multibase.nim#L358" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multibase.nim#L361" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
 <div id="encode,typedesc[MultiBase],string,openArray[byte]" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#encode%2Ctypedesc%5BMultiBase%5D%2Cstring%2CopenArray%5Bbyte%5D"><span class="Identifier">encode</span></a><span class="Other">(</span><span class="Identifier">mbtype</span><span class="Other">:</span> <span class="Identifier">typedesc</span><span class="Other">[</span><a href="multibase.html#MultiBase"><span class="Identifier">MultiBase</span></a><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">encoding</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span>
-            <span class="Identifier">inbytes</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Result</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">,</span> <span class="Identifier">string</span><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span></span>.}</pre></dt>
+            <span class="Identifier">inbytes</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Result</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">,</span> <span class="Identifier">string</span><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 Encode array <tt class="docutils literal"><span class="pre">inbytes</span></tt> using MultiBase encoding scheme <tt class="docutils literal"><span class="pre">encoding</span></tt> and return encoded string.
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/autonat/libp2p/multibase.nim#L441"
+href="https://github.com/status-im/nim-libp2p/tree/autonat/libp2p/multibase.nim#L444"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multibase.nim#L441" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multibase.nim#L444" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
 <div id="encode,typedesc[MultiBase],string,openArray[byte],openArray[char],int" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#encode%2Ctypedesc%5BMultiBase%5D%2Cstring%2CopenArray%5Bbyte%5D%2CopenArray%5Bchar%5D%2Cint"><span class="Identifier">encode</span></a><span class="Other">(</span><span class="Identifier">mbtype</span><span class="Other">:</span> <span class="Identifier">typedesc</span><span class="Other">[</span><a href="multibase.html#MultiBase"><span class="Identifier">MultiBase</span></a><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">encoding</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span>
             <span class="Identifier">inbytes</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">outbytes</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">char</span><span class="Other">]</span><span class="Other">;</span>
-            <span class="Identifier">outlen</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <a href="multibase.html#MultiBaseStatus"><span class="Identifier">MultiBaseStatus</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span></span>.}</pre></dt>
+            <span class="Identifier">outlen</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <a href="multibase.html#MultiBaseStatus"><span class="Identifier">MultiBaseStatus</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 <p>Encode array <tt class="docutils literal"><span class="pre">inbytes</span></tt> using MultiBase encoding scheme <tt class="docutils literal"><span class="pre">encoding</span></tt> and store encoded value to <tt class="docutils literal"><span class="pre">outbytes</span></tt>.</p>
@@ -365,24 +365,24 @@ class="link-seesrc" target="_blank">Source</a>
 <p>On successfull encoding <tt class="docutils literal"><span class="pre">MultiBaseStatus.Success</span></tt> will be returned and <tt class="docutils literal"><span class="pre">outlen</span></tt> will be set to number of encoded octets (bytes).</p>
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/autonat/libp2p/multibase.nim#L371"
+href="https://github.com/status-im/nim-libp2p/tree/autonat/libp2p/multibase.nim#L374"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multibase.nim#L371" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multibase.nim#L374" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
 <div id="encodedLength,typedesc[MultiBase],string,int" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#encodedLength%2Ctypedesc%5BMultiBase%5D%2Cstring%2Cint"><span class="Identifier">encodedLength</span></a><span class="Other">(</span><span class="Identifier">mbtype</span><span class="Other">:</span> <span class="Identifier">typedesc</span><span class="Other">[</span><a href="multibase.html#MultiBase"><span class="Identifier">MultiBase</span></a><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">encoding</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">length</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> {.
-    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span></span>.}</pre></dt>
+    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 <p>Return estimated size of buffer to store MultiBase encoded value with encoding <tt class="docutils literal"><span class="pre">encoding</span></tt> of length <tt class="docutils literal"><span class="pre">length</span></tt>.</p>
 <p>Procedure returns <tt class="docutils literal"><span class="pre">-1</span></tt> if <tt class="docutils literal"><span class="pre">encoding</span></tt> scheme is not supported or not present.</p>
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/autonat/libp2p/multibase.nim#L342"
+href="https://github.com/status-im/nim-libp2p/tree/autonat/libp2p/multibase.nim#L345"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multibase.nim#L342" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multibase.nim#L345" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -396,7 +396,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-08-02 11:03:08 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-08-03 15:24:07 UTC</small>
       </div>
     </div>
   </div>
